<resources>
    <string name="app_name">EmojiFun</string>


    <string name="bottom_text_1">主题</string>
    <string name="bottom_text_2">幻想</string>
    <string name="bottom_text_3">E墙</string>
    <string name="bottom_text_4">F帖</string>

    <string name="left_nav_text_1">PERSON SPACE</string>
    <string name="left_nav_text_2">INFO LIST</string>
    <string name="left_nav_text_3">MESSAGE</string>
    <string name="left_nav_text_4">FOLDER</string>
    <string name="left_nav_text_5">DOWNLOAD</string>
    <string name="left_nav_text_6">APPRECIATION</string>
    <string name="left_nav_text_other">MORE</string>
</resources>
